RESOLVED FIXED201108
REGRESSION (18E140): “return streaming movie to real time” suggesting “resume real time streaming”
https://bugs.webkit.org/show_bug.cgi?id=201108
Summary REGRESSION (18E140): “return streaming movie to real time” suggesting “resume...
Peng Liu
Reported 2019-08-23 17:29:53 PDT
INSTRUCTIONS: Please check following strings in glossaries. ACTUAL RESULTS: return streaming movie to real time SUGGESTION: resume real time streaming SUMMARY: suggesting resume streaming for real time. DATA: key id: return streaming movie to real time origin: WebCore/System/Library/Frameworks/WebKit.framework/Versions/A/Frameworks/WebCore.framework/Versions/A/Resources/en.lproj/Localizable.strings note: accessibility help text for return streaming movie to real time button source: return streaming movie to real time
Attachments
A patch (2.39 KB, patch)
2019-08-23 18:07 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2019-08-23 17:30:38 PDT
Peng Liu
Comment 2 2019-08-23 18:07:53 PDT
WebKit Commit Bot
Comment 3 2019-08-26 11:03:33 PDT
Comment on attachment 377190 [details] A patch Clearing flags on attachment: 377190 Committed r249106: <https://trac.webkit.org/changeset/249106>
WebKit Commit Bot
Comment 4 2019-08-26 11:03:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.