REGRESSION (18E140): “return streaming movie to real time” suggesting “resume real time streaming” https://bugs.webkit.org/show_bug.cgi?id=201108 <rdar://problem/46372525>

Patch by Peng Liu <peng.liu6@apple.com> on 2019-08-26
Reviewed by Eric Carlson.

Update Localizable.strings.

No new test.

* en.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:
(WebCore::localizedMediaControlElementHelpText):

Canonical link: https://commits.webkit.org/214828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249106 268f45cc-cd09-0410-ab3c-d52691b4dbfc